--- a/build-x86/zbar/libzbar-0.vcxproj
+++ b/build-x86/zbar/libzbar-0.vcxproj
@@ -14,22 +14,22 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{88EE133D-5ED2-331E-92A0-5F017376177C}</ProjectGuid>
+    <ProjectGuid>{F30BF12D-1B14-376B-883B-5D6F590F2C34}</ProjectGuid>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
     <Keyword>Win32Proj</Keyword>
     <Platform>Win32</Platform>
-    <ProjectName>libzbar</ProjectName>
+    <ProjectName>libzbar-0</ProjectName>
     <VCProjectUpgraderObjectName>NoUpgrade</VCProjectUpgraderObjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <CharacterSet>MultiByte</CharacterSet>
-    <PlatformToolset>v143</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
     <PlatformToolset>v140</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
@@ -42,13 +42,13 @@
   <PropertyGroup>
     <_ProjectFileVersion>10.0.20506.1</_ProjectFileVersion>
     <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">D:\Codes\SelfGit\zbar\libzbar-0.10\build-x86\zbar\Debug\</OutDir>
-    <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">libzbar.dir\Debug\</IntDir>
+    <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">libzbar-0.dir\Debug\</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">libzbar-0</TargetName>
     <TargetExt Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">.dll</TargetExt>
     <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</LinkIncremental>
     <GenerateManifest Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</GenerateManifest>
     <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">D:\Codes\SelfGit\zbar\libzbar-0.10\build-x86\zbar\Release\</OutDir>
-    <IntDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">libzbar.dir\Release\</IntDir>
+    <IntDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">libzbar-0.dir\Release\</IntDir>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">libzbar-0</TargetName>
     <TargetExt Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">.dll</TargetExt>
     <LinkIncremental Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</LinkIncremental>
@@ -56,7 +56,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>D:\Codes\SelfGit\zbar\libzbar-0.10\include;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\decoder;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\qrcode;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\libiconv-win\include;C:\Program Files\Windows Kits\10\Include\10.0.22000.0\ucrt;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\win-include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Codes\SelfGit\zbar\libzbar-0.10\include;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\decoder;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\qrcode;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\libiconv-win\include;C:\Program Files\Windows Kits\10\Include\8.1\ucrt;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\win-include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalOptions>%(AdditionalOptions) /w /w</AdditionalOptions>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
@@ -65,15 +65,15 @@
       <Optimization>MaxSpeed</Optimization>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <UseFullPaths>false</UseFullPaths>
-      <PreprocessorDefinitions>%(PreprocessorDefinitions);LIB_ZBAR_BUILD;HAVE_FCNTL;HAVE_INTTYPES;HAVE_MEMORY;HAVE_STDINT;HAVE_STDLIB;HAVE_STRING;HAVE_STAT;HAVE_TYPES;HAVE_UNISTD;HAVE_VFW;CMAKE_INTDIR="Debug";libzbar_EXPORTS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>%(PreprocessorDefinitions);LIB_ZBAR_BUILD;HAVE_FCNTL;HAVE_INTTYPES;HAVE_MEMORY;HAVE_STDINT;HAVE_STDLIB;HAVE_STRING;HAVE_STAT;HAVE_TYPES;HAVE_UNISTD;HAVE_VFW;CMAKE_INTDIR="Debug";libzbar_0_EXPORTS</PreprocessorDefinitions>
       <ObjectFileName>$(IntDir)</ObjectFileName>
     </ClCompile>
     <ResourceCompile>
-      <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;_DEBUG;LIB_ZBAR_BUILD;HAVE_FCNTL;HAVE_INTTYPES;HAVE_MEMORY;HAVE_STDINT;HAVE_STDLIB;HAVE_STRING;HAVE_STAT;HAVE_TYPES;HAVE_UNISTD;HAVE_VFW;CMAKE_INTDIR=\"Debug\";libzbar_EXPORTS</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>D:\Codes\SelfGit\zbar\libzbar-0.10\include;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\decoder;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\qrcode;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\libiconv-win\include;C:\Program Files\Windows Kits\10\Include\10.0.22000.0\ucrt;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\win-include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;_DEBUG;LIB_ZBAR_BUILD;HAVE_FCNTL;HAVE_INTTYPES;HAVE_MEMORY;HAVE_STDINT;HAVE_STDLIB;HAVE_STRING;HAVE_STAT;HAVE_TYPES;HAVE_UNISTD;HAVE_VFW;CMAKE_INTDIR=\"Debug\";libzbar_0_EXPORTS</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>D:\Codes\SelfGit\zbar\libzbar-0.10\include;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\decoder;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\qrcode;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\libiconv-win\include;C:\Program Files\Windows Kits\10\Include\8.1\ucrt;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\win-include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>D:\Codes\SelfGit\zbar\libzbar-0.10\include;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\decoder;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\qrcode;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\libiconv-win\include;C:\Program Files\Windows Kits\10\Include\10.0.22000.0\ucrt;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\win-include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Codes\SelfGit\zbar\libzbar-0.10\include;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\decoder;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\qrcode;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\libiconv-win\include;C:\Program Files\Windows Kits\10\Include\8.1\ucrt;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\win-include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(ProjectDir)/$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -86,8 +86,8 @@
       <AdditionalOptions>%(AdditionalOptions) /machine:X86</AdditionalOptions>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
-      <ImportLibrary>D:/Codes/SelfGit/zbar/libzbar-0.10/build-x86/zbar/Debug/libzbar.lib</ImportLibrary>
-      <ProgramDataBaseFile>D:/Codes/SelfGit/zbar/libzbar-0.10/build-x86/zbar/Debug/libzbar.pdb</ProgramDataBaseFile>
+      <ImportLibrary>D:/Codes/SelfGit/zbar/libzbar-0.10/build-x86/zbar/Debug/libzbar-0.lib</ImportLibrary>
+      <ProgramDataBaseFile>D:/Codes/SelfGit/zbar/libzbar-0.10/build-x86/zbar/Debug/libzbar-0.pdb</ProgramDataBaseFile>
       <SubSystem>Console</SubSystem>
     </Link>
     <ProjectReference>
@@ -96,7 +96,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>D:\Codes\SelfGit\zbar\libzbar-0.10\include;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\decoder;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\qrcode;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\libiconv-win\include;C:\Program Files\Windows Kits\10\Include\10.0.22000.0\ucrt;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\win-include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Codes\SelfGit\zbar\libzbar-0.10\include;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\decoder;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\qrcode;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\libiconv-win\include;C:\Program Files\Windows Kits\10\Include\8.1\ucrt;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\win-include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalOptions>%(AdditionalOptions) /w /w</AdditionalOptions>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
       <ExceptionHandling>
@@ -104,18 +104,17 @@
       <Optimization>MaxSpeed</Optimization>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <UseFullPaths>false</UseFullPaths>
-      <PreprocessorDefinitions>%(PreprocessorDefinitions);LIB_ZBAR_BUILD;HAVE_FCNTL;HAVE_INTTYPES;HAVE_MEMORY;HAVE_STDINT;HAVE_STDLIB;HAVE_STRING;HAVE_STAT;HAVE_TYPES;HAVE_UNISTD;HAVE_VFW;CMAKE_INTDIR="Release";libzbar_EXPORTS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>%(PreprocessorDefinitions);LIB_ZBAR_BUILD;HAVE_FCNTL;HAVE_INTTYPES;HAVE_MEMORY;HAVE_STDINT;HAVE_STDLIB;HAVE_STRING;HAVE_STAT;HAVE_TYPES;HAVE_UNISTD;HAVE_VFW;CMAKE_INTDIR="Release";libzbar_0_EXPORTS</PreprocessorDefinitions>
       <ObjectFileName>$(IntDir)</ObjectFileName>
       <DebugInformationFormat>
       </DebugInformationFormat>
-      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <ResourceCompile>
-      <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;LIB_ZBAR_BUILD;HAVE_FCNTL;HAVE_INTTYPES;HAVE_MEMORY;HAVE_STDINT;HAVE_STDLIB;HAVE_STRING;HAVE_STAT;HAVE_TYPES;HAVE_UNISTD;HAVE_VFW;CMAKE_INTDIR=\"Release\";libzbar_EXPORTS</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>D:\Codes\SelfGit\zbar\libzbar-0.10\include;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\decoder;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\qrcode;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\libiconv-win\include;C:\Program Files\Windows Kits\10\Include\10.0.22000.0\ucrt;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\win-include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;LIB_ZBAR_BUILD;HAVE_FCNTL;HAVE_INTTYPES;HAVE_MEMORY;HAVE_STDINT;HAVE_STDLIB;HAVE_STRING;HAVE_STAT;HAVE_TYPES;HAVE_UNISTD;HAVE_VFW;CMAKE_INTDIR=\"Release\";libzbar_0_EXPORTS</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>D:\Codes\SelfGit\zbar\libzbar-0.10\include;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\decoder;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\qrcode;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\libiconv-win\include;C:\Program Files\Windows Kits\10\Include\8.1\ucrt;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\win-include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>D:\Codes\SelfGit\zbar\libzbar-0.10\include;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\decoder;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\qrcode;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\libiconv-win\include;C:\Program Files\Windows Kits\10\Include\10.0.22000.0\ucrt;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\win-include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Codes\SelfGit\zbar\libzbar-0.10\include;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\decoder;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\qrcode;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\libiconv-win\include;C:\Program Files\Windows Kits\10\Include\8.1\ucrt;D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\win-include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(ProjectDir)/$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -128,8 +127,8 @@
       <AdditionalOptions>%(AdditionalOptions) /machine:X86</AdditionalOptions>
       <GenerateDebugInformation>false</GenerateDebugInformation>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
-      <ImportLibrary>D:/Codes/SelfGit/zbar/libzbar-0.10/build-x86/zbar/Release/libzbar.lib</ImportLibrary>
-      <ProgramDataBaseFile>D:/Codes/SelfGit/zbar/libzbar-0.10/build-x86/zbar/Release/libzbar.pdb</ProgramDataBaseFile>
+      <ImportLibrary>D:/Codes/SelfGit/zbar/libzbar-0.10/build-x86/zbar/Release/libzbar-0.lib</ImportLibrary>
+      <ProgramDataBaseFile>D:/Codes/SelfGit/zbar/libzbar-0.10/build-x86/zbar/Release/libzbar-0.pdb</ProgramDataBaseFile>
       <SubSystem>Console</SubSystem>
     </Link>
     <ProjectReference>
@@ -168,6 +167,7 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\notused\convert.c" />
     <ClCompile Include="D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\decoder.c" />
     <ClCompile Include="D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\error.c" />
     <ClCompile Include="D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\image.c" />
