--- a/build-x86/zbar/libzbar-0.vcxproj.filters
+++ b/build-x86/zbar/libzbar-0.vcxproj.filters
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="17.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <ClCompile Include="D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\notused\convert.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="D:\Codes\SelfGit\zbar\libzbar-0.10\zbar\decoder.c">
       <Filter>Source Files</Filter>
     </ClCompile>
